hphp/hack/test/typecheck/expression_trees/property_access_splice.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(): ExprTree<Code, Code::TAst, ExampleInt> {
  throw new Exception();
}

abstract class MyClass {
  protected ExprTree<Code, Code::TAst, ExampleInt> $prop;
}

abstract class MyChildClass extends MyClass {
  public function __construct() {
    $this->prop = foo();
  }

  public function test(): void {
    Code`(): ExampleInt ==> {
      return ${ $this->prop };
    }`;
  }
}
